// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkScrollableCalendar should render correctly 1`] = `
<div
  className="bpk-calendar bpk-scrollable-calendar bpk-calendar--fixed"
>
  <header
    className="bpk-calendar-header bpk-scrollable-calendar__header"
  >
    <ol
      className="bpk-calendar-header__week"
    >
      <li
        className="bpk-calendar-header__weekday"
        title="Monday"
      >
        <span
          aria-hidden="true"
        >
          Mon
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday"
        title="Tuesday"
      >
        <span
          aria-hidden="true"
        >
          Tue
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday"
        title="Wednesday"
      >
        <span
          aria-hidden="true"
        >
          Wed
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday"
        title="Thursday"
      >
        <span
          aria-hidden="true"
        >
          Thu
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday"
        title="Friday"
      >
        <span
          aria-hidden="true"
        >
          Fri
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday bpk-calendar-header__weekday--weekend bpk-calendar-header__weekday--weekend-start"
        title="Saturday"
      >
        <span
          aria-hidden="true"
        >
          Sat
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday bpk-calendar-header__weekday--weekend bpk-calendar-header__weekday--weekend-end"
        title="Sunday"
      >
        <span
          aria-hidden="true"
        >
          Sun
        </span>
      </li>
    </ol>
  </header>
  <div>
    <div
      className="bpk-scrollable-calendar-grid-list__strip"
      style={null}
    />
    <div
      className="bpk-sentinel"
    />
  </div>
</div>
`;

exports[`BpkScrollableCalendar should support arbitrary props 1`] = `
<div
  className="bpk-calendar bpk-scrollable-calendar bpk-calendar--fixed"
>
  <header
    className="bpk-calendar-header bpk-scrollable-calendar__header"
  >
    <ol
      className="bpk-calendar-header__week"
    >
      <li
        className="bpk-calendar-header__weekday"
        title="Monday"
      >
        <span
          aria-hidden="true"
        >
          Mon
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday"
        title="Tuesday"
      >
        <span
          aria-hidden="true"
        >
          Tue
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday"
        title="Wednesday"
      >
        <span
          aria-hidden="true"
        >
          Wed
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday"
        title="Thursday"
      >
        <span
          aria-hidden="true"
        >
          Thu
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday"
        title="Friday"
      >
        <span
          aria-hidden="true"
        >
          Fri
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday bpk-calendar-header__weekday--weekend bpk-calendar-header__weekday--weekend-start"
        title="Saturday"
      >
        <span
          aria-hidden="true"
        >
          Sat
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday bpk-calendar-header__weekday--weekend bpk-calendar-header__weekday--weekend-end"
        title="Sunday"
      >
        <span
          aria-hidden="true"
        >
          Sun
        </span>
      </li>
    </ol>
  </header>
  <div>
    <div
      className="bpk-scrollable-calendar-grid-list__strip"
      style={null}
    />
    <div
      className="bpk-sentinel"
    />
  </div>
</div>
`;

exports[`BpkScrollableCalendar should support custom class names 1`] = `
<div
  className="bpk-calendar custom-classname bpk-scrollable-calendar bpk-calendar--fixed"
>
  <header
    className="bpk-calendar-header bpk-scrollable-calendar__header"
  >
    <ol
      className="bpk-calendar-header__week"
    >
      <li
        className="bpk-calendar-header__weekday"
        title="Monday"
      >
        <span
          aria-hidden="true"
        >
          Mon
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday"
        title="Tuesday"
      >
        <span
          aria-hidden="true"
        >
          Tue
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday"
        title="Wednesday"
      >
        <span
          aria-hidden="true"
        >
          Wed
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday"
        title="Thursday"
      >
        <span
          aria-hidden="true"
        >
          Thu
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday"
        title="Friday"
      >
        <span
          aria-hidden="true"
        >
          Fri
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday bpk-calendar-header__weekday--weekend bpk-calendar-header__weekday--weekend-start"
        title="Saturday"
      >
        <span
          aria-hidden="true"
        >
          Sat
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday bpk-calendar-header__weekday--weekend bpk-calendar-header__weekday--weekend-end"
        title="Sunday"
      >
        <span
          aria-hidden="true"
        >
          Sun
        </span>
      </li>
    </ol>
  </header>
  <div>
    <div
      className="bpk-scrollable-calendar-grid-list__strip"
      style={null}
    />
    <div
      className="bpk-sentinel"
    />
  </div>
</div>
`;
